--- a/html/templates/url_cut.html
+++ b/html/templates/url_cut.html
@@ -4,32 +4,36 @@
         <section class="container my-5 px-4">
             <h1 class="text-center"><span style="color:red">Ya</span>Cut</h1>
             <p class="text-center my-4">
-                Создайте короткую ссылку автоматически или предложите свой вариант
+                Создайте короткую ссылку автоматически или предложите свой
+                вариант
             </p>
             <div class="container">
                 <div class="row my-3">
                     <div class="col-sm">
-                    </div>
-                    <div class="col-sm">
-                        <form>
-                            <div>
-                                <div>
-                                    <input type="text" class="form-control form-control-lg py-2 mb-3" id="form-title"
-                                           name=""
-                                           placeholder="Длинная ссылка">
-                                    <p><span style="color:red">Текст возможной ошибки</span></p>
-                                </div>
-                                <div>
-                                    <input type="url" class="form-control form-control-lg py-2 mb-3" id="form-link"
-                                           name=""
-                                           placeholder="Ваш вариант короткой ссылки">
-                                    <p><span style="color:red">Текст возможной ошибки</span></p>
-                                </div>
+                        <form method="POST" novalidate>
+                            {{ form.csrf_token }}
+                            {{ form.original_link(class="form-control form-control-lg py-2 mb-3", placeholder="Длинная ссылка") }}
+                            {% if form.original_link.errors %}
+                                <p class="text-danger">
+                                    {% for error in form.original_link.errors %}
+                                        {{ error }}
+                                    {% endfor %}
+                                </p>
+                            {% endif %}
 
-                                <input type="submit" class="btn btn-primary" value="Создать">
-                            </div>
+                                {{ form.custom_id(class="form-control form-control-lg py-3 mb-3", placeholder="Ваш вариант короткой ссылки") }}
+                                {% if form.custom_id.errors %}
+                                    <p class="text-danger">
+                                        {% for error in form.custom_id.errors %}
+                                            {{ error }}
+                                        {% endfor %}
+                                    </p>
+                                {% endif %}
+                                {{ form.submit(class="btn btn-primary") }}
                         </form>
                     </div>
+                </div>
+            </div>
                     <div class="col-sm">
                     </div>
                 </div>
@@ -40,7 +44,8 @@
                     </div>
                     <div class="col-sm">
                         <p class="text-center">
-                        <h5 class="text-center">Пример информационного сообщения</h5>
+                        <h5 class="text-center">Пример информационного
+                            сообщения</h5>
                         </p>
                     </div>
                     <div class="col-sm">
