--- a/html/templates/url_cut.html
+++ b/html/templates/url_cut.html
@@ -12,7 +12,7 @@
                     <div class="col-sm">
                         <form method="POST" novalidate>
                             {{ form.csrf_token }}
-                            {{ form.original_link(class="form-control form-control-lg py-2 mb-3", placeholder="Длинная ссылка") }}
+                            {{ form.original_link(class="form-control form-control-lg py-2 mb-3", placeholder=form.original_link.label.text) }}
                             {% if form.original_link.errors %}
                                 <p class="text-danger">
                                     {% for error in form.original_link.errors %}
@@ -20,8 +20,7 @@
                                     {% endfor %}
                                 </p>
                             {% endif %}
-
-                            {{ form.custom_id(class="form-control form-control-lg py-3 mb-3", placeholder="Ваш вариант короткой ссылки") }}
+                            {{ form.custom_id(class="form-control form-control-lg py-2 mb-3", placeholder=form.custom_id.label.text) }}
                             {% if form.custom_id.errors %}
                                 <p class="text-danger">
                                     {% for error in form.custom_id.errors %}
@@ -35,27 +34,15 @@
                 </div>
             </div>
             <div class="col-sm">
-            </div>
-            </div>
-            </div>
-            <div class="container">
-                <div class="row ">
-                    <div class="col-sm">
-                    </div>
-                    <div class="col-sm">
-                        <p class="text-center">
-                        <h5 class="text-center">
-                            {% if url %}
-                                Ваша короткая сслыка готова:
-                                <a href="{{ url_for('get_original_url', short=url.short, _external=True) }}">{{ url_for('get_original_url', short=url.short, _external=True) }}</a>
-                                </p>
-                                </h5>
-                            {% else %}  {% endif %}
+                <p class="text-center">
+                <h5 class="text-center">
+                    {% if url %}
+                        Ваша короткая сслыка готова:
+                        <a href="{{ url_for('get_original_url', short=url.short, _external=True) }}">{{ url_for('get_original_url', short=url.short, _external=True) }}</a>
                         </p>
-                    </div>
-                    <div class="col-sm">
-                    </div>
-                </div>
+                        </h5>
+                    {% else %}  {% endif %}
+                </p>
             </div>
         </section>
     </main>
