--- a/html/templates/url_cut.html
+++ b/html/templates/url_cut.html
@@ -4,30 +4,25 @@
         <section class="container my-5 px-4">
             <h1 class="text-center"><span style="color:red">Ya</span>Cut</h1>
             <p class="text-center my-4">
-                Создайте короткую ссылку автоматически или предложите свой
-                вариант
+                Создайте короткую ссылку автоматически или предложите свой вариант
             </p>
             <div class="container">
                 <div class="row my-3">
                     <div class="col-sm">
                         <form method="POST" novalidate>
                             {{ form.csrf_token }}
-                            {{ form.original_link(class="form-control form-control-lg py-2 mb-3", placeholder=form.original_link.label.text) }}
-                            {% if form.original_link.errors %}
-                                <p class="text-danger">
-                                    {% for error in form.original_link.errors %}
-                                        {{ error }}
-                                    {% endfor %}
-                                </p>
-                            {% endif %}
-                            {{ form.custom_id(class="form-control form-control-lg py-2 mb-3", placeholder=form.custom_id.label.text) }}
-                            {% if form.custom_id.errors %}
-                                <p class="text-danger">
-                                    {% for error in form.custom_id.errors %}
-                                        {{ error }}
-                                    {% endfor %}
-                                </p>
-                            {% endif %}
+                            {% for field in form %}
+                                {% if field.name != 'submit' %}
+                                    {{ field(class="form-control form-control-lg py-2 mb-3", placeholder=field.label.text) }}
+                                    {% if field.errors %}
+                                        <p class="text-danger">
+                                            {% for error in field.errors %}
+                                                {{ error }}
+                                            {% endfor %}
+                                        </p>
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
                             {{ form.submit(class="btn btn-primary") }}
                         </form>
                     </div>
