--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -4,11 +4,13 @@
         <section class="container my-5 px-4">
             <h1 class="text-center"><span style="color:red">Ya</span>Cut</h1>
             <p class="text-center my-4">
-                Создайте короткую ссылку автоматически или предложите свой вариант
+                Создайте короткую ссылку автоматически или предложите свой
+                вариант
             </p>
             <div class="container">
                 <div class="row my-3">
                     <div class="col-sm">
+
                         <form method="POST" novalidate>
                             {{ form.csrf_token }}
                             {% for field in form %}
@@ -24,6 +26,15 @@
                                 {% endif %}
                             {% endfor %}
                             {{ form.submit(class="btn btn-primary") }}
+                            <p class="py-3 mb-3">
+                                {% with messages = get_flashed_messages() %}
+                                    {% if messages %}
+                                        {% for message in messages %}
+                                            {{ message }}
+                                        {% endfor %}
+                                    {% endif %}
+                                {% endwith %}
+                            </p>
                         </form>
                     </div>
                 </div>
@@ -36,8 +47,7 @@
                         <a href="{{ url_for('get_original_url', short=url.short, _external=True) }}">{{ url_for('get_original_url', short=url.short, _external=True) }}</a>
                         </p>
                         </h5>
-                    {% else %}  {% endif %}
-                </p>
+                    {% else %}{% endif %}
             </div>
         </section>
     </main>
