--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../img/fav/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../img/fav/favicon-16x16.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <title>YaCut - укоротитель ссылок</title>
+    <title>{% block title %}YaCut - укоротитель ссылок{% endblock title %}</title>
 </head>
 <body>
 {% include "header.html" %}
