--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -10,7 +10,6 @@
             <div class="container">
                 <div class="row my-3">
                     <div class="col-sm">
-
                         <form method="POST" novalidate>
                             {{ form.csrf_token }}
                             {% for field in form %}
@@ -43,7 +42,7 @@
                 <p class="text-center">
                 <h5 class="text-center">
                     {% if url %}
-                        Ваша короткая сслыка готова:
+                        Ваша короткая ссылка готова:
                         <a href="{{ url_for('get_original_url', short=url.short, _external=True) }}">{{ url_for('get_original_url', short=url.short, _external=True) }}</a>
                         </p>
                         </h5>
